# stromx-zbar

./: CMakeLists.txt  stromx-zbar.kdev4
debian/: changelog  control
rpm/: stromx-zbar.spec
stromx/: CMakeLists.txt
stromx/zbar/: CMakeLists.txt  Config.h.in  Locale.h  Scan.cpp  Scan.h  Zbar.cpp  Zbar.h
stromx/zbar/test/: CMakeLists.txt  ScanTest.cpp  ScanTest.h
